--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_CALL_LOG"></uses-permission>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:allowBackup="true"
@@ -36,7 +37,15 @@
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
             </intent-filter>
         </receiver>
-        <service android:name=".Calling"/>
+
+        <service
+            android:name=".Calling"
+            android:enabled="true"
+            />
+        <activity
+            android:name=".DialogActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        </activity>
 
     </application>
 
