--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
-    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"/>
+<!--    <uses-permission android:name="android.permission.SEND_SMS" />-->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -35,15 +36,15 @@
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE"/>
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>-->
+<!--            </intent-filter>-->
         </receiver>
 
-        <service
-            android:name=".Calling"
-            android:enabled="true"
-            />
+<!--        <service-->
+<!--            android:name=".Calling"-->
+<!--            android:enabled="true"-->
+<!--            />-->
         <activity
             android:name=".DialogActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
