--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,10 +41,9 @@
 <!--            </intent-filter>-->
         </receiver>
 
-<!--        <service-->
-<!--            android:name=".Calling"-->
-<!--            android:enabled="true"-->
-<!--            />-->
+        <service
+            android:name=".Calling"
+            />
         <activity
             android:name=".DialogActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
