--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,14 @@ android {
 
 dependencies {
 
+    //matisse(갤러리)
+    implementation 'com.zhihu.android:matisse:0.5.3-beta3'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //크롭(프로필사진)
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
